fix: distortion in home page is fixed

--- a/src/pages/home-page/home-page.css
+++ b/src/pages/home-page/home-page.css
@@ -34,13 +34,14 @@
   font-size: 1rem;
 }
 
-.page--center {
+.homepage .page--center {
   width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   row-gap: 1.8rem;
+  padding-left: 0rem;
 }
 
 .categories .image-container {
